--- a/CA 1 - SEM 2.ipynb
+++ b/CA 1 - SEM 2.ipynb
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2be307b0",
+   "id": "500400a5",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9da09e8c",
+   "id": "a2862484",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "36bac7e9",
+   "id": "f3c4ccae",
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "71511d6c",
+   "id": "35b99c2d",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "307fd3ba",
+   "id": "2a661fcd",
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e790cb41",
+   "id": "63571100",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f71886db",
+   "id": "aaa53df9",
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "82704ee8",
+   "id": "4e48e976",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c49e7982",
+   "id": "2d326f0d",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7d4c3311",
+   "id": "85f00df1",
    "metadata": {
     "scrolled": false
    },
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3764de59",
+   "id": "874a196c",
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1623,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "90134571",
+   "id": "66179910",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1643,7 +1643,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "c6013fcc",
+   "id": "aad01651",
    "metadata": {
     "scrolled": true
    },
@@ -1684,7 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "23cfe20c",
+   "id": "12d587a2",
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1703,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "376c6790",
+   "id": "723b5b2b",
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1744,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9fc4bf5e",
+   "id": "7c66a049",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1756,8 +1756,10 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a4f4479c",
-   "metadata": {},
+   "id": "adc242e4",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "ename": "Forbidden",
@@ -1783,8 +1785,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "id": "09ecbdb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting praw\n",
+      "  Downloading praw-7.7.1-py3-none-any.whl (191 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m191.0/191.0 KB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting prawcore<3,>=2.1\n",
+      "  Downloading prawcore-2.3.0-py3-none-any.whl (16 kB)\n",
+      "Collecting update-checker>=0.18\n",
+      "  Downloading update_checker-0.18.0-py3-none-any.whl (7.0 kB)\n",
+      "Collecting websocket-client>=0.54.0\n",
+      "  Downloading websocket_client-1.6.3-py3-none-any.whl (57 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.3/57.3 KB\u001b[0m \u001b[31m11.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests<3.0,>=2.6.0 in /home/hduser/.local/lib/python3.10/site-packages (from prawcore<3,>=2.1->praw) (2.31.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/hduser/.local/lib/python3.10/site-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (3.2.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /usr/lib/python3/dist-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (3.3)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/lib/python3/dist-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (1.26.5)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/lib/python3/dist-packages (from requests<3.0,>=2.6.0->prawcore<3,>=2.1->praw) (2020.6.20)\n",
+      "Installing collected packages: websocket-client, update-checker, prawcore, praw\n",
+      "Successfully installed praw-7.7.1 prawcore-2.3.0 update-checker-0.18.0 websocket-client-1.6.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install praw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "2185bf78",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title:  /r/Netflix Discord Server\n",
+      "Score:  428\n",
+      "URL:  https://www.reddit.com/r/netflix/comments/mxm3re/rnetflix_discord_server/\n",
+      "-----------------------------\n",
+      "Title:  Netflix Announces Plans to Crack Down on Password Sharing [MEGATHREAD].\n",
+      "Score:  665\n",
+      "URL:  https://www.reddit.com/r/netflix/comments/10rlxds/netflix_announces_plans_to_crack_down_on_password/\n",
+      "-----------------------------\n",
+      "Title:  Kid's account keep reactivating cancelled Netflix account\n",
+      "Score:  118\n",
+      "URL:  https://www.reddit.com/r/netflix/comments/16kyabp/kids_account_keep_reactivating_cancelled_netflix/\n",
+      "-----------------------------\n",
+      "Title:  Netflix Canada Brooklyn 99\n",
+      "Score:  33\n",
+      "URL:  https://www.reddit.com/r/netflix/comments/16kual7/netflix_canada_brooklyn_99/\n",
+      "-----------------------------\n",
+      "Title:  heart of stone, atrocious music\n",
+      "Score:  2\n",
+      "URL:  https://www.reddit.com/r/netflix/comments/16l97km/heart_of_stone_atrocious_music/\n",
+      "-----------------------------\n",
+      "Title:  Suddenly Only French\n",
+      "Score:  13\n",
+      "URL:  https://www.reddit.com/r/netflix/comments/16kvtsu/suddenly_only_french/\n",
+      "-----------------------------\n",
+      "Title:  Looking for true crime series with a different case each episode\n",
+      "Score:  5\n",
+      "URL:  https://www.reddit.com/r/netflix/comments/16l2g8g/looking_for_true_crime_series_with_a_different/\n",
+      "-----------------------------\n",
+      "Title:  For people that don't know what to watch\n",
+      "Score:  0\n",
+      "URL:  https://www.reddit.com/r/netflix/comments/16l7w61/for_people_that_dont_know_what_to_watch/\n",
+      "-----------------------------\n",
+      "Title:  \"UHD\" tag should appear even if my device doesn't support it, so I know if I want to watch the title on another device to take advatage of 4K.\n",
+      "Score:  1\n",
+      "URL:  https://www.reddit.com/r/netflix/comments/16l1ve0/uhd_tag_should_appear_even_if_my_device_doesnt/\n",
+      "-----------------------------\n",
+      "Title:  New crime thriller compared to Gone Girl overtakes One Piece to become Netflix’s #1 show\n",
+      "Score:  1\n",
+      "URL:  https://www.gamesradar.com/netflix-thriller-series-crime-dear-child-beats-one/\n",
+      "-----------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "import praw\n",
+    "\n",
+    "# Initialize the Reddit API client\n",
+    "reddit = praw.Reddit(\n",
+    "    client_id=\"Xe9IRPfIlUw0nVPF9cw9kA\",\n",
+    "    client_secret=\"ORZ0dkJE6ORRi1HAX1ZXzFqjReT2rQ\",\n",
+    "    user_agent=\"Fabio-CCT\"\n",
+    ")\n",
+    "\n",
+    "# Get the 10 hottest posts from the Netflix subreddit\n",
+    "hot_posts = reddit.subreddit(\"Netflix\").hot(limit=10)\n",
+    "\n",
+    "for post in hot_posts:\n",
+    "    print(\"Title: \", post.title)\n",
+    "    print(\"Score: \", post.score)\n",
+    "    print(\"URL: \", post.url)\n",
+    "    print(\"-----------------------------\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7941e664",
+   "id": "c343eebb",
    "metadata": {},
    "outputs": [],
    "source": []
